--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MovieDetailActivity"
+        <activity android:name=".VideoPlayer"
+            android:screenOrientation="landscape"/>
+        <activity
+            android:name=".MovieDetailActivity"
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.moviestreamingapp.MainActivity"/>
+                android:value="com.example.moviestreamingapp.MainActivity" />
         </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
